twitter/src/app/app.component.css
#header {
  font-family: Trebuchet MS, sans-serif;
  font-size: 20px;
  width: 100%;
  background: white;
  text-align: center;
  padding: 10px;
  margin: -10px -10px 10px -10px;
  border-bottom: 1px solid #a6a6a6;
}

.submit {
  text-align: center;
  width: 98%;
  background: #4d94ff;
  padding: 2px;
  border: 2px solid #4d94ff;
  border-radius: 30px;
  margin-top: 12px;
}

.feed {
  margin: 0 auto;
  width: 40%;
}

.feed-box {
  background: white;
  border: 2px solid white;
  border-radius: 5px;
  padding: 10px;
  border-bottom: 1px solid #d9d9d9;
}

.form.feed-box {
  background: #b3ecff;
  border: 2px solid #b3ecff;
  border-radius: 5px;
  padding: 10px;
  margin-bottom: 20px;
}

textarea {
  width: 97%;
  padding: 5px;
  border-radius: 5px;
  border-color: #4d94ff;
  font-size: 13px;
}

.heart-div {
  margin-top: 7px;
}

.heart {
  position: relative;
  width: 20px;
  top: 29px;
}

.likes {
  position: relative;
  margin-left: 6px;
  top: 25px;
}

.comment {
  position: relative;
  width: 18px;
  height: 20px;
  margin-left: 20px;
  top: 30px;
}

.comments {
  position: relative;
  margin-left: 7px;
  top: 25px;
}

.check {
  position: relative;
  width: 30px;
  margin-left: 5px;
}

.comment-input {
  position: relative;
  margin-left: 21%;
  width: 69%;
  bottom: 10px;
}

.comment-div {
  margin-left: 25px;
  margin-top: 5px;
}

.camera {
  width: 30px;
  position: relative;
  top: 8px;
}

.url-input {
  margin-left: 5px;
  border-radius: 3px;
  border-color: #4d94ff;
  border-width: thin;
  width: 91%;
  height: 17px;
  font-size: 12px;
}

.post-image {
  width: 99%;
  margin-top: 5px;
}

.link {
  margin-top: 7px;
}

.link-img {
  width: 30px;
  position: relative;
  top: 3px;
}

.post-link {
  color: blue;
  text-decoration: underline;
}

.post-link:hover {
  cursor: pointer;
}

